# TicTacToeRL

./: CMakeLists.txt
src/: agent.cpp  agent.h  environment.cpp  environment.h  game.cpp  game.h  main.cpp  network.h  play.cpp  train_network.cpp  trainer.cpp  trainer.h
tests/: test_agent.cpp  test_environment.cpp  test_trainer.cpp
